--- a/FaPA/GUI/Design/Templates/CrudFattura.xaml
+++ b/FaPA/GUI/Design/Templates/CrudFattura.xaml
@@ -1,9 +1,13 @@
-﻿<UserControl x:Class="FaPA.GUI.Controls.CRUDVM"
+﻿<UserControl x:Class="FaPA.GUI.Design.Templates.CrudFattura"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:FaPA.GUI.Design.Templates"
+             xmlns:utils="clr-namespace:FaPA.GUI.Utils"
              xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
-             xmlns:utils="clr-namespace:FaPA.GUI.Utils">
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             mc:Ignorable="d" >
     
     <StackPanel Orientation="Vertical" Height="Auto"  Margin="2,2,2,2" 
                 utils:FocusAdvancement.AdvancesByEnterKey="True">
@@ -13,15 +17,15 @@
 
 
             <KeyBinding Key="Add"  Modifiers="Ctrl" Command="{Binding AddCopy}" />
-            
+
             <!--
                             Command="{Binding RelativeSource={RelativeSource FindAncestor, 
                                               AncestorType={x:Type Window}},
                                               Path=Presenter.SearchOnSite}"             
             -->
-            
+
             <KeyBinding Key="F9" Command="{Binding SearchOnSite}" />
-            
+
         </StackPanel.InputBindings>
 
         <DockPanel>
@@ -34,7 +38,8 @@
 
         </DockPanel>
 
-        <DockPanel Height="25" Margin="2,5,2,2" Background="{StaticResource Brush_ToolBar}">
+        <DockPanel Height="25" Margin="2,5,2,2" HorizontalAlignment="Left"
+                   Background="{StaticResource Brush_ToolBar}">
 
             <Button Name="Delete" Command="{Binding DeleteEntityCommand}"                        
                     ToolTip="Elimina definitivamente l'oggetto dal database" >
@@ -43,9 +48,9 @@
 
             <Button Name="CreateNew" Command="{Binding Path=AddNewEntity}"
                     ToolTip="Crea nuovo oggetto"  IsEnabled="{Binding Path=AllowInsertNewEntity}">
-                
+
                 <Image Source="/GUI/Design/Styles/Images/1343547225_file_add.png" Width="25"/>
-                
+
             </Button>
 
             <Button Name="Save" Command="{Binding SaveEntity}"
@@ -68,7 +73,7 @@
                                                          RelativeSource={RelativeSource FindAncestor, 
                                                                                         AncestorType={x:Type  Window}}}"
                                    IsEnabled="{Binding Path=AllowRecordsNavigation}"/>
-            
+
             <xctk:SplitButton  x:Name="Search"
                     ToolTip= "Apre la finestra per la ricerca estesa"
                     Command="{Binding Path=Presenter.Search, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"   
@@ -90,7 +95,7 @@
                     </Border>
                 </xctk:SplitButton.DropDownContent>
             </xctk:SplitButton>
-            
+
             <Button x:Name="SearchOnSite" Command="{Binding SearchOnSite}" 
                     ToolTip= "Abilita la modalità ricerca immediata sul posto (tasto scorciatoia: F9)&#x0a;Per eseguire la ricerca, dopo aver abilitato la ricerca immediata ed aver immesso i dati, premere Ctrl-Invio"
                     Width="25" HorizontalAlignment="Left" IsEnabled="{Binding AllowFastSearch}">
@@ -99,10 +104,58 @@
 
             </Button>
 
+            <Button Name="CreateNewCopy" Margin="5,0,0,0"
+                    Command="{Binding AddCopy}"
+                    ToolTip="Crea una nuova fattura con copia di quella corrente - Scelta rapida Ctrl +"  
+                    IsEnabled="{Binding Path=AllowInsertNewEntity}">
+
+                <Image Source="/GUI/Design/Styles/Images/Files-New-File-icon.png" Width="25"/>
+
+            </Button>
+
+            <Button Name="ViewXmlIntoTreeView" Command="{Binding ShowXmlIntoTreeViewCommand}"
+                    Margin="2,0,0,0"
+                    ToolTip="Visualizzazione albero fattura pa" VerticalAlignment="Stretch"
+                    IsEnabled="{Binding Path=IsInEditing, Converter={StaticResource InverseBooleanConverter}}">
+
+                <Image Source="/GUI/Design/Styles/Images/Flow Chart-48.png" />
+            </Button>
+
+            <Button Name="ViewXmlIntoBrowser" Command="{Binding ShowXmlIntoBrowserCommand}"
+                    Margin="2,0,0,0"
+                    ToolTip="Visualizzazione browser fattura pa" VerticalAlignment="Stretch"
+                    IsEnabled="{Binding Path=IsInEditing, Converter={StaticResource InverseBooleanConverter}}">
+
+                <Image Source="/GUI/Design/Styles/Images/report-icon.png" />
+            </Button>
+
+            <xctk:SplitButton  Command="{Binding GenerateXmlStreamCommand}"    
+                               ToolTip="Generazione file fattura PA sul desktop" 
+                               VerticalAlignment="Stretch" 
+                               Margin="2,0,0,0" Width="Auto"
+                               HorizontalAlignment="Left">
+
+                <Image Source="/GUI/Design/Styles/Images/Send File-48.png" Width="25" />
+                
+                <xctk:SplitButton.DropDownContent>
+                    <Border  Background="CornflowerBlue" >
+                        <CheckBox IsChecked="{Binding IsOfficialSent}"
+                                  IsEnabled="{Binding IsOfficialSentEnabled, Converter={StaticResource InverseBooleanConverter}}"
+                                  Margin="3,3,3,3"
+                                  Foreground="Black"
+                                  Canvas.Left="20" 
+                                  Canvas.Top="10" 
+                                  Content="Generazione definitiva"
+                                  FontSize="15"  >
+                        </CheckBox>
+                    </Border>
+                </xctk:SplitButton.DropDownContent>
+            </xctk:SplitButton>
+
+
 
         </DockPanel>
 
 
     </StackPanel>
-
 </UserControl>
