--- a/FaPA/GUI/Design/Styles/Shared.xaml
+++ b/FaPA/GUI/Design/Styles/Shared.xaml
@@ -12,6 +12,12 @@
     <c1:NullToInverseVisibiltyConverter x:Key="NullToInverseVisibiltyConverter"/>
     <c1:InvertVisibilityConverter x:Key="InvertVisibilityConverter"/>
 
+    <SolidColorBrush x:Key="GroubHeaderBackgroundBrush" Color="#FFB9D1EA"/>
+
+    <SolidColorBrush x:Key="DefaultControlBorderBrush" Color="#FF688CAF"/>
+    <SolidColorBrush x:Key="DefaultControlBackgroundBrush" Color="#FFE3F1FE"/>
+    <SolidColorBrush x:Key="DefaultControlForegroundBrush" Color="#FF10257F"/>
+
     <Style x:Key="GroupHeaderStyle" TargetType="{x:Type GroupItem}">
         <Setter Property="Template">
             <Setter.Value>
